--- a/natour/css/style.css
+++ b/natour/css/style.css
@@ -59,6 +59,9 @@ body {
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
+
+    animation-name: moveInLeft;
+    animation-duration: 5s;
 }
 
 .heading-primary-sub {
@@ -66,4 +69,18 @@ body {
     font-size: 20px;
     font-weight: 700;
     letter-spacing: 17.4px;
+}
+
+@keyframes moveInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-100px);
+    }
+    80%{
+
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
+    }
 }
