--- a/natour/css/style.css
+++ b/natour/css/style.css
@@ -35,25 +35,31 @@ body {
     position: absolute;
     top: 40px;
     left: 40px;
-
+    padding: 10px;
 }
 
 .logo {
     height: 35px;
 }
 
+/*.logo:hover{*/
+/*    opacity: 0;*/
+/*}*/
+
 .text-box {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
 
-    backface-visibility: hidden;
+    backface-visibility: hidden;  /*removing shaking part*/
+    margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -107,4 +113,68 @@ body {
         opacity: 1;
         transform: translate(0);
     }
+}
+
+@keyframes moveInBottom {
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.btn:link,
+.btn:visited{
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .5s;
+    position: relative;
+
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0,0,0, .2);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0,0,0, .2);
+}
+.btn-white {
+    background-color: #fff;
+    color: #777;
+}
+
+.btn::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all .4s;
+}
+
+.btn-white::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scale(1.2);
+    opacity: 0;
+}
+
+.btn-animated {
+    animation: moveInBottom 1.2s ease-in 0.5s;
+    animation-fill-mode: backwards; /*applied before move*/
 }
